[package]
name        = "thound"
version     = "0.1.1"
authors     = ["Denys Mentiei <endden@gmail.com>"]
description = "Finds the folders with VC toolchain and Windows SDK"
license     = "MIT"
edition     = "2021"
repository  = "https://github.com/den-mentiei/thound"
readme      = "README.md"
keywords    = ["winsdk", "toolchain", "vc", "detection"]
categories  = ["development-tools", "development-tools::build-utils"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[[example]]
name = "usage"